# django-insider

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py  views.py
backend/insider/: apps.py  db_router.py  middleware.py  models.py  notifiers.py  publishers.py  registry.py  settings.py  tasks.py  urls.py  utils.py  views.py
backend/insider/api/: filters.py  serializers.py  urls.py  views.py
backend/insider/integrations/: base.py  github.py  gmail.py  jira.py  slack.py
backend/insider/management/commands/: sync_integrations.py
backend/insider/migrations/: 0001_initial.py  0004_incidence_updated_at.py  0004_insiderintegration_insiderintegrationkey.py  0005_refresh_integrations.py  0006_refresh_integrations.py  0007_refresh_integrations.py
backend/insider/services/: email.py  footprint.py  jira.py
backend/insider/static/insider/assets/: index.css  index.js
backend/insider/test/: test_tasks.py
backend/insider/tests/: test_insider_models.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  type.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Skeleton.tsx
frontend/src/layout/: DashboardLayout.tsx
insider/: admin.py  middleware.py  models.py  notifiers.py  publishers.py  settings.py  tasks.py  utils.py
insider/migrations/: 0001_initial.py  0002_alter_footprint_options_footprint_request_id_and_more.py  0003_issue_footprint_exception_name_footprint_stack_trace_and_more.py  0004_issue_last_notified.py
insider/modules/: jira.py  slack.py
(+8 files in other folders)
